Grammar
stmt  ->  expr eol stmt
          eol

expr  ->  term expr'

expr' ->  + term expr'
          - term expr'
          epsilon

term  ->  factor term'

term' ->  * factor term'
          / factor term'
          epsilon

factor  ->  base ^ expr
            base

base  ->  - expr
          ( expr )
          id ID
          num

ID    ->  ( expr )
          epsilon
